@@ -47,9 +47,13 @@ Doc: sorts the vector $x$ in ascending order, using a mergesort method.
  the second component, and when these are equal, with respect to the first,
  and when these are equal, with respect to the third.
 
- \item a comparison function (\typ{CLOSURE}), with two arguments $x$ and $y$,
+ \item a comparison function: \typ{CLOSURE} with two arguments $x$ and $y$,
  and returning a real number which is $<0$, $>0$ or $=0$ if $x<y$, $x>y$ or
  $x=y$ respectively.
+
+ \item a key: \typ{CLOSURE} with one argument $x$ and returning
+ the value $f(x)$ with respect to which we sort.
+
  \bprog
  ? vecsort([3,0,2; 1,0,2]) \\ sort columns according to lex order
  %1 =
@@ -58,19 +62,26 @@ Doc: sorts the vector $x$ in ascending order, using a mergesort method.
  [0 2 1]
  ? vecsort(v, (x,y)->y-x)            \\@com reverse sort
  ? vecsort(v, (x,y)->abs(x)-abs(y))  \\@com sort by increasing absolute value
+ ? vecsort(v, abs)  \\@com sort by increasing absolute value, using key
  ? cmpf(x,y) = my(dx = poldisc(x), dy = poldisc(y)); abs(dx) - abs(dy);
- ? v = [x^2+1, x^3-2, x^4+5*x+1]; vecsort(v, cmpf)
+ ? v = [x^2+1, x^3-2, x^4+5*x+1] vecsort(v, cmpf) \\@com comparison function
+ ? vecsort(v, x->abs(poldisc(x)))  \\@com key
  @eprog\noindent
- The last example used the named \kbd{cmpf} instead of an anonymous function,
- and sorts polynomials with respect to the absolute value of their
- discriminant. A more efficient approach would use precomputations to ensure
- a given discriminant is computed only once:
+ The \kbd{abs} and \kbd{cmpf} examples show how to use a named function
+ instead of an anonymous function. It is preferable to use a \var{key}
+ whenever possible rather than include it in the comparison function as above
+ since the key is evaluated $O(n)$ times instead of $O(n\log n)$,
+ where $n$ is the number of entries.
+
+ A direct approach is also possible and equivalent to using a sorting key:
  \bprog
  ? T = [abs(poldisc(x)) | x<-v];
- ? perm = vecsort(T,,1); \\ indirect sort
+ ? perm = vecsort(T,,1); \\@com indirect sort
  ? vecextract(v, perm)
- @eprog\noindent Similar ideas apply whenever we sort according to the values
- of a function which is expensive to compute.
+ @eprog\noindent This also provides the vector $T$ of all keys, which is
+ interesting for instance in later \tet{vecsearch} calls: it is more
+ efficient to sort $T$ (\kbd{T = vecextract(T, perm)}) then search for a key
+ in \$T$ rather than to search in $v$ using a comparison function or a key.
 
  \noindent The binary digits of \fl\ mean:
 
