@@ -20,6 +20,11 @@ error("incorrect type in lexicographic vecsort, index too large (t_INT).")
 4, 1]]
 1
 0
+[x^3 - 2, x^2 + 27, x^2 + 1, x + 1]
+Vecsmall([2, 4, 1, 3])
+Vecsmall([3, 1, 4, 2])
+Vecsmall([3, 1, 2])
+3
 Vecsmall([1, 2, 3, 4])
 0
 0
@@ -36,4 +41,4 @@ List([])
   ***   at top-level: vecsort(Vecsmall(1),1)
   ***                 ^----------------------
   *** vecsort: incorrect type in sort_function (t_VECSMALL).
-Total time spent: 0
+Total time spent: 1
