@@ -379,6 +379,8 @@ BA  155- qfisom: allow to give the automorphism group of the second lattice
     156- optional argument to idealfactor [limit factorization]
     157- [libpari] idealHNF_Z_factor_i, idealfactor_limit, famat_div_shallow,
          Q_factor, Q_factor_limit, vecsquarefreeu
+    158- vecsort / vecsearch: allow sort/search wrt to a "key" (closure with
+         arity 1)
 
   Changed
       1- rewrite bnfnarrow
